adding Java 20 features